@@ -2,6 +2,8 @@
 
 v0.1.2    2014-01-07 20:42:26 UTC
 
+  Positron::Handler::Template changes:
+  - Wrapping ':' sigil
   Positron::Handler::ArrayRef changes:
   - Attribute HashRef no longer required to be present (but must still
     be in second position if it is)
